...
                        presentationMode.wrappedValue.dismiss()
                    }) {
                        Text("ContactFormView_Cancel".localizedString)
                            .font(Font.system(size: 17))
                            .foregroundColor(Color.viewButtton)
                    }
                    .accessibilityIdentifier("ContactFormView_CloseButton")
                }
                
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button(action: {
                        viewModel.sendInquiry { error in
                            let isError = error != nil
...
